--- a/application/views/scripts/partials/action-dropdown.phtml
+++ b/application/views/scripts/partials/action-dropdown.phtml
@@ -1,7 +1,10 @@
-<ul class="action-list left-dropout">
-  <?php foreach($this->actions as $action): ?>
-    <li>
-      <a href="<?php echo $action['link']; ?>" title="<?php echo $this->translate($action['title']); ?>"><img class="icon" src="<?php echo $this->baseUrl($action['icon']); ?>" alt="" /></a>
-    </li>
-  <?php endforeach; ?>
-</ul>
+<div class="btn-group">
+  <button class="btn dropdown-toggle"><?php echo $this->translate('Action'); ?> <span class="caret"></span></button>
+  <ul class="dropdown-menu pull-right">
+    <?php foreach($this->actions as $action): ?>
+      <li>
+        <a href="<?php echo $action['link']; ?>" title="<?php echo $this->translate($action['title']); ?>"><img class="icon" src="<?php echo $this->baseUrl($action['icon']); ?>" alt="" /> <?php echo $this->translate($action['title']); ?></a>
+      </li>
+    <?php endforeach; ?>
+  </ul>
+</div>
