--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -25,7 +25,7 @@ foreach($dbresults as $key=>$value){
 $cases = $results;
 ?>
 <?php echo $this->partial('partials/header.phtml', array('defaultNamespace'=>$defaultNamespace, 'me'=>$me, 'cases'=>$cases)); ?>
-<div role="main" class="clearfix show-contextmenu">
+<div role="main" class="clearfix">
   <?php echo $this->partial('partials/messages.phtml', array('defaultNamespace'=>$defaultNamespace, 'flashMessages'=>$this->flashMessages)); ?>
   <!--<div class="breadcrumbs">
     <?php //echo $this->navigation()->breadcrumbs(); ?>
