--- a/application/views/scripts/document/list.phtml
+++ b/application/views/scripts/document/list.phtml
@@ -20,8 +20,8 @@ $this->headTitle($this->title);
           <?php else: ?>
             <td data-label="<?php echo $this->translate("Title"); ?>"><?php echo $document->getTitle(); ?></td>
           <?php endif; ?>
-          <td data-label="<?php echo $this->translate("Pages"); ?>"><?php echo $document->getPages()->count(); ?></a></td>
-          <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $document->getState()->getTitle(); ?></a></td>
+          <td data-label="<?php echo $this->translate("Pages"); ?>"><?php echo $document->getPages()->count(); ?></td>
+          <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $document->outputState; ?></td>
           <td data-label="<?php echo $this->translate("Actions"); ?>">
             <?php if($document->getState()->getName() == 'parsed'): ?>
               <?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$document->actions)); ?>
