--- a/application/views/scripts/document/page/simtext/list-reports.phtml
+++ b/application/views/scripts/document/page/simtext/list-reports.phtml
@@ -18,7 +18,7 @@ $this->headTitle($this->title);
           <?php }else{ ?>
             <td data-label="<?php echo $this->translate("Title"); ?>"><?php echo $report->getTitle(); ?></td>
           <?php } ?>
-          <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $report->getState()->getTitle(); ?></td>
+          <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $report->outputState; ?></td>
         </tr>
       <?php endforeach; ?>
     <?php else: ?>
