--- a/application/views/scripts/document/page/de-hyphen.phtml
+++ b/application/views/scripts/document/page/de-hyphen.phtml
@@ -4,6 +4,6 @@ $this->headTitle($this->title);
 ?>
 Document: <?php echo $this->page->getDocument()->getTitle(); ?><br />
 Page: <?php echo $this->page->getPageNumber(); ?><br />
-<div class="document-page">
+<div class="src-wrapper">
 <?php echo $this->deHyphenForm; ?>
 </div>
