some basic rating stuff, not completely working yet.

--- a/application/layouts/scripts/partials/sidebars/fragment_tools.phtml
+++ b/application/layouts/scripts/partials/sidebars/fragment_tools.phtml
@@ -19,7 +19,7 @@
       </a>
     </li>
   
-  <li class="nav nav-header">Links</li>
+  <li class="nav-header">Links</li>
     <li>
       <a href="<?php echo "/document_fragment/changelog/id/" . $this->fragmentId;     ?>">
         <img class="icon" src="<?php echo $this->baseUrl('images/icons/table_relationship.png'); ?>" title="<?php echo $this->translate("Changelog"); ?>" /><span><?php echo $this->translate("Changelog"); ?></span>
