--- a/application/layouts/scripts/partials/sidebars/page_tools.phtml
+++ b/application/layouts/scripts/partials/sidebars/page_tools.phtml
@@ -1,7 +1,6 @@
 <nav id="right-nav">
   <ul class="nav nav-list">
-    <li class="nav-header">
-  Actions</li>
+    <li class="nav-header">Actions</li>
     <li>
       <a href="<?php echo "/document_page/show/id/" . $this->pageId; ?>">
         <img class="icon" src="<?php echo $this->baseUrl('images/icons/page.png'); ?>" title="<?php echo $this->translate("Show"); ?>" /><span><?php echo $this->translate("Show"); ?></span>
@@ -37,8 +36,7 @@
         <img class="icon" src="<?php echo $this->baseUrl('images/icons/table_row_delete.png'); ?>" title="<?php echo $this->translate("Simtext"); ?>" /><span><?php echo $this->translate("Simtext"); ?></span>
       </a>
     </li>
-    <li class="nav-header">
-  Links</li>
+    <li class="nav-header">Links</li>
     <li>
       <a href="<?php echo "/document_fragment/list/page/" . $this->pageId; ?>">
         <img class="icon" src="<?php echo $this->baseUrl('images/icons/textfield_rename.png'); ?>" title="<?php echo $this->translate("Fragments"); ?>" /><span><?php echo $this->translate("Fragments"); ?></span>
