--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -637,8 +637,8 @@ nav#right-nav ul li a .count {
   border-bottom: 1px #d4d4d4 solid;
 
 }
-.default-container h3,
-.diff h3{
+.default-container h4,
+.diff h4{
   -moz-border-radius: 6px 6px 0 0;
   -webkit-border-radius: 6px 6px 0 0;
   border-radius: 6px 6px 0 0;  
@@ -655,8 +655,8 @@ table.default {
 }
 
 table.default th,
-.default-container h3,
-.diff h3{
+.default-container h4,
+.diff h4{
   color: #666666;
   text-align: left;
   padding: 8px 5px 8px 15px;
@@ -670,6 +670,12 @@ table.default th,
   background-image:     -ms-linear-gradient(top, #f5f5f5, #eee);
   background-image:      -o-linear-gradient(top, #f5f5f5, #eee); 
   background-image:         linear-gradient(top, #f5f5f5, #eee);
+}
+
+h3 {
+  border-bottom: 1px solid #EEE;
+  margin-bottom: 10px;
+  font-weight: normal;
 }
 
 table.default th:first-child {
@@ -1086,6 +1092,10 @@ dl.zend_form dd dt {
 
 .icon-report {
   background: url(/images/icons/report.png);
+}
+
+.icon-rate {
+  background: url(/images/icons/star.png);
 }
 
 #activity-stream {
