some ui improvements concerning buttons

--- a/application/views/scripts/document/fragment/list.phtml
+++ b/application/views/scripts/document/fragment/list.phtml
@@ -32,4 +32,4 @@ $this->headTitle($this->title);
 </table>
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
-<a class="btn btn-primary" href="/document_fragment/create"><i class="icon-create-fragment"></i><?php echo $this->translate("Create a fragment"); ?></span></a>
+<a class="btn btn-primary" href="/document_fragment/create"><i class="icon-create-fragment icon-fam"></i><?php echo $this->translate("Create a fragment"); ?></span></a>
