--- a/application/views/scripts/document/fragment/show.phtml
+++ b/application/views/scripts/document/fragment/show.phtml
@@ -7,10 +7,6 @@ $this->headTitle($this->title);
 <?php echo $this->translate("Type"); ?>: <?php echo $this->fragment->getType()->getName(); ?><br/>
 <?php echo $this->translate("Note"); ?>: <?php echo $this->fragment->getNote(); ?>
 
-<label for="compare-with-no-color" class="checkbox">
-  <input type="checkbox" name="compare" id="compare-with-no-color" checked="checked" value="<?php echo $this->fragment->getId(); ?>" />
-  Compare with no color</label>
-
 
 <div class="document-page diff clearfix">
   <div class="src-wrapper">
@@ -25,6 +21,9 @@ $this->headTitle($this->title);
     <p>To: page <?php echo $this->source->getLineTo()->getPage()->getPageNumber(); ?>, line <?php echo $this->source->getLineTo()->getLineNumber(); ?></p>
     <div id="sourceText"><?php echo $this->content['source']; ?></div>
   </div>
+</div>
+<div style="text-align: right">
+<a href="#" class="btn compare-with-color" data-colors="true" data-value="<?php echo $this->fragment->getId(); ?>"><i class="icon-remove-circle"></i>Hide colors</a>
 </div>
 
 <h3>Ratings</h3>
@@ -43,11 +42,11 @@ $this->headTitle($this->title);
       </div>
     </div>
   <?php endforeach; ?>
-  <a class="btn" href="/document_fragment/rate/source/<?php echo $this->fragment->getId(); ?>"><i class="icon-rate"></i>Approve / decline</a>
+  <a class="btn" href="/document_fragment/rate/source/<?php echo $this->fragment->getId(); ?>"><i class="icon-rate icon-fam"></i>Approve / decline</a>
 </div>
 <h3>Comments</h3>
 <div>
-  <a class="btn toggle-comments" href="#" for="comments-wrapper-<?php echo $this->fragment->getId(); ?>"><i class="icon-comments"></i>Show comments</a>
+  <a class="btn toggle-comments" href="#" for="comments-wrapper-<?php echo $this->fragment->getId(); ?>"><i class="icon-comments icon-fam"></i>Show comments</a>
   <br /><br />
   <?php echo $this->partial('partials/comments.phtml', array('sourceId'=>$this->fragment->getId(), 'hidden'=>true)); ?>
 </div>
