--- a/application/views/scripts/file/list.phtml
+++ b/application/views/scripts/file/list.phtml
@@ -26,5 +26,5 @@
 </table>
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
-<a class="btn btn-primary" href="/file/upload"><i class="icon-upload"></i><?php echo $this->translate("Upload a file"); ?></a>
+<a class="btn btn-primary" href="/file/upload"><i class="icon-upload icon-fam"></i><?php echo $this->translate("Upload a file"); ?></a>
 
