--- a/application/views/scripts/document/fragment/show.phtml
+++ b/application/views/scripts/document/fragment/show.phtml
@@ -4,10 +4,27 @@ $this->headTitle($this->title);
 ?>
 
 <h3>Details</h3>
-<?php echo $this->translate("Type"); ?>: <?php echo $this->fragment->getType()->getName(); ?><br/>
-<?php echo $this->translate("Note"); ?>: <?php echo $this->fragment->getNote(); ?>
 
-
+<?php if(!$this->fragmentIsRated) { ?>
+<p>
+<div class="btn btn-info">The fragment needs your approval.</div>
+</p>
+<?php } else { ?>
+<p>
+<div class="btn btn-success">The fragment is approved and therefore not editable anymore.</div>
+</p>
+<?php } 
+/*
+<p>
+<div class="btn btn-danger">The fragment was declined by multiple users and is not a plagiarism proof.</div>
+</p>
+*/
+?>
+<p>
+  <?php echo $this->translate("Type"); ?>: <?php echo $this->fragment->getType()->getName(); ?><br/>
+  <?php echo $this->translate("Note"); ?>: <?php echo $this->fragment->getNote(); ?>
+</p>
+<p>
 <div class="document-page diff clearfix">
   <div class="src-wrapper">
     <h4><?php echo $this->translate("Fragment"); ?></h4>
@@ -22,28 +39,38 @@ $this->headTitle($this->title);
     <div id="sourceText"><?php echo $this->content['source']; ?></div>
   </div>
 </div>
-<div style="text-align: right">
-<a href="#" class="btn compare-with-color" data-colors="true" data-value="<?php echo $this->fragment->getId(); ?>"><i class="icon-remove-circle"></i>Hide colors</a>
-</div>
+</p>
+<p class="pagination-right">
+  <a href="#" class="btn compare-with-color" data-colors="true" data-value="<?php echo $this->fragment->getId(); ?>"><i class="icon-remove-circle"></i>Hide colors</a>
+</p>
 
 <h3>Ratings</h3>
+<p>
 <div class="accordion" id="ratings-accordion">
   <?php foreach($this->ratings as $rating): ?>
     <div class="accordion-group">
       <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#ratings-accordion" href="#collapse<?php echo $rating->getId(); ?>">
-          <?php echo $rating->getUser()->getUsername(); ?> <?php echo $rating->getRating() ? 'Approve' : 'Decline'; ?>
+        <a class="accordion-toggle <?php echo $rating->getRating() ? 'rating-approval' : 'rating-decline'; ?>" data-toggle="collapse" data-parent="#ratings-accordion" href="#collapse<?php echo $rating->getId(); ?>">
+          <i class="<?php echo $rating->getRating() ? 'icon-thumbs-up' : 'icon-thumbs-down'; ?>"></i><?php echo $rating->getUser()->getUsername(); ?>, <?php echo Unplagged_Helper::humanTiming($rating->getCreated()); ?>
         </a>
       </div>
       <div id="collapse<?php echo $rating->getId(); ?>" class="accordion-body collapse">
         <div class="accordion-inner">
-          <?php echo $rating->getReason(); ?>
+          <?php if($rating->getUser()->getId() == $this->meId){ ?>
+            <a href="/document_fragment/rate/id/<?php echo $rating->getId(); ?>/source/<?php echo $this->fragment->getId(); ?>"><i class="icon-edit icon-fam float-right edit-rating"></i></a>
+          <?php } ?>
+          <?php echo $rating->getReason() ? $rating->getReason() : '<i>No reason set</i>'; ?>
         </div>
       </div>
     </div>
   <?php endforeach; ?>
-  <a class="btn" href="/document_fragment/rate/source/<?php echo $this->fragment->getId(); ?>"><i class="icon-rate icon-fam"></i>Approve / decline</a>
 </div>
+</p>
+<?php if(!$this->fragmentIsRated) { ?>
+<p>
+<a class="btn" href="/document_fragment/rate/source/<?php echo $this->fragment->getId(); ?>"><i class="icon-rate icon-fam"></i>Approve / decline</a>
+</p>
+<?php } ?>
 <h3>Comments</h3>
 <div>
   <a class="btn toggle-comments" href="#" for="comments-wrapper-<?php echo $this->fragment->getId(); ?>"><i class="icon-comments icon-fam"></i>Show comments</a>
