--- a/application/views/scripts/permission/edit-role.phtml
+++ b/application/views/scripts/permission/edit-role.phtml
@@ -17,3 +17,17 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 ?>
+<?php echo $this->editForm; ?>
+<!--<form action="" method="POST">
+  <?php foreach($this->allPermissions as $controllerName=>$permissions): ?>
+    <div class="well">
+      <h3><?php echo $controllerName; ?></h3>
+        <?php foreach($permissions as $permission): ?>
+      <span class="test">
+          <a type="checkbox" name="<?php echo $permission; ?>"type="button" class="btn" data-toggle="button" value="<?php echo $permission; ?>"><?php echo $permission; ?></a>
+      </span>
+        <?php endforeach; ?>
+    </div>
+  <?php endforeach; ?>
+  <button class="btn btn-primary">Submit</button>
+</form>-->
