--- a/application/views/scripts/permission/list.phtml
+++ b/application/views/scripts/permission/list.phtml
@@ -17,3 +17,29 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 ?>
+<table cellpadding="0" cellspacing="0" class="default">
+  <thead>
+    <tr>
+      <th style="width: 85%;"><?php echo $this->translate("Role name"); ?></th>
+      <th><?php echo $this->translate("Actions"); ?></th>
+    </tr>
+  </thead>
+  <tbody>
+    <?php if(count($this->paginator)): ?>
+      <?php foreach($this->paginator as $role): ?>
+        <tr>
+          <td data-label="<?php echo $this->translate("Role name"); ?>"><?php echo $role->getRoleId(); ?></td>
+          <td data-label="<?php echo $this->translate("Actions"); ?>"><a href="/permission/edit-role/id/<?php echo $role->getId(); ?>" class="btn">Edit</a></td>
+        </tr>
+      <?php endforeach; ?>
+    <?php else: ?>
+      <tr>
+        <td colspan="4" class="no-label"><?php echo $this->translate("No files found."); ?></td>
+      </tr>
+    <?php endif; ?>
+  </tbody>
+</table>
+<?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
+
+<a class="btn btn-primary" href="/file/upload"><i class="icon-upload icon-fam"></i><?php echo $this->translate("Create New Role"); ?></a>
+
