--- a/application/layouts/scripts/partials/sidebars/default.phtml
+++ b/application/layouts/scripts/partials/sidebars/default.phtml
@@ -5,7 +5,7 @@
   
     <?php foreach ($this->cases as $case): ?>
     <li>
-      <a href="#"><?php echo $case->getPublishableName(); ?> <span class="count"><?php echo $case->getPlagiarismPercentage(); ?> %</span>
+      <a href="#"><?php echo $case->getPublishableName(); ?> <span class="badge badge-light"><?php echo $case->getPlagiarismPercentage(); ?> %</span>
         <div class="barcode">
         <img src="/images/plag_barcode.png" alt="barcode"/>
         </div>
