--- a/application/views/scripts/case/list.phtml
+++ b/application/views/scripts/case/list.phtml
@@ -8,7 +8,7 @@ $this->headTitle($this->title);
       <th><?php echo $this->translate("Name"); ?></th>
       <th style="width: 110px;"><?php echo $this->translate("Alias"); ?></th>
       <th style="width: 100px;"><?php echo $this->translate("Abbreviation"); ?></th>
-      <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
+      <th class="fit-content"><?php echo $this->translate("Actions"); ?></th>
     </tr>
   </thead>
   <tbody>
@@ -18,7 +18,7 @@ $this->headTitle($this->title);
           <td data-label="<?php echo $this->translate("Name"); ?>"><?php echo $case->getName(); ?></td>
           <td data-label="<?php echo $this->translate("Alias"); ?>"><?php echo $case->getAlias(); ?></td>
           <td data-label="<?php echo $this->translate("Abbreviation"); ?>"><?php echo $case->getAbbreviation(); ?></td>
-          <td data-label="<?php echo $this->translate("Actions"); ?>"><?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$case->actions)); ?></td>
+          <td data-label="<?php echo $this->translate("Actions"); ?>" class="fit-content"><?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$case->actions)); ?></td>
         </tr>
       <?php endforeach; ?>
     <?php else: ?>
