--- a/application/views/scripts/document/list.phtml
+++ b/application/views/scripts/document/list.phtml
@@ -8,7 +8,7 @@ $this->headTitle($this->title);
       <th><?php echo $this->translate("Title"); ?></th>
       <th><?php echo $this->translate("Pages"); ?></th>
       <th><?php echo $this->translate("State"); ?></th>
-      <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
+      <th class="fit-content"><?php echo $this->translate("Actions"); ?></th>
     </tr>
   </thead>
   <tbody>
@@ -22,7 +22,7 @@ $this->headTitle($this->title);
           <?php endif; ?>
           <td data-label="<?php echo $this->translate("Pages"); ?>"><?php echo $document->getPages()->count(); ?></td>
           <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $document->outputState; ?></td>
-          <td data-label="<?php echo $this->translate("Actions"); ?>">
+          <td data-label="<?php echo $this->translate("Actions"); ?>" class="fit-content">
             <?php if($document->getState()->getName() == 'parsed'): ?>
               <?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$document->actions)); ?>
             <?php endif; ?>
