--- a/application/views/scripts/document/page/de-hyphen.phtml
+++ b/application/views/scripts/document/page/de-hyphen.phtml
@@ -1,9 +1,8 @@
-<?php
-$this->title = $this->translate("De-hyphenator");
-$this->headTitle($this->title);
-?>
-Document: <?php echo $this->page->getDocument()->getTitle(); ?><br />
-Page: <?php echo $this->page->getPageNumber(); ?><br />
+<?php $this->headTitle($this->title); ?>
+<h3><?php echo $this->subtitle; ?> <small>De-hyphanator</small></h3>
+
 <div class="src-wrapper de-hyphen">
 <?php echo $this->deHyphenForm; ?>
 </div>
+
+<?php echo $this->partial('partials/next-prev-paginator.phtml', array('prevLink'=>$this->prevPageLink, 'nextLink'=>$this->nextPageLink)); ?>
