--- a/application/views/scripts/report/list.phtml
+++ b/application/views/scripts/report/list.phtml
@@ -1,26 +1,22 @@
-<?php
-$this->title = $this->translate("List of final reports");
-$this->headTitle($this->title);
-?>
-<table cellpadding="0" cellspacing="0" class="default"> 
+<table cellpadding="0" cellspacing="0" class="default">
   <thead>
     <tr>
-      <th><?php echo $this->translate("Title"); ?></th>
-      <th style="width: 70px;"><?php echo $this->translate("Case"); ?></th>
-      <th style="width: 70px;"><?php echo $this->translate("State"); ?></th>
-      <th style="width: 100px;"><?php echo $this->translate("Source"); ?></th>
+      <th style="width: 20px;"></th>
+      <th><?php echo $this->translate("Casename"); ?></th>
+      <th style="width: 110px;"><?php echo $this->translate("State"); ?></th>
+	  <th style="width: 110px;"><?php echo $this->translate("Source"); ?></th>
+      <th class="fit-content"><?php echo $this->translate(""); ?></th>
     </tr>
   </thead>
-   <tbody>
+  <tbody>
     <?php if(count($this->paginator)): ?>
       <?php foreach($this->paginator as $report): ?>
-        <tr>
-          <?php if($report->getState()->getName() == "report_generated"){ ?>
-            <td data-label="<?php echo $this->translate("Title"); ?>"><a href="<?php echo $report->getDirectLink(); ?>"><?php echo $report->getTitle(); ?></a></td>
-          <?php }else{ ?>
-            <td data-label="<?php echo $this->translate("Title"); ?>"><?php echo $report->getTitle(); ?></td>
-          <?php } ?>
-          <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $report->getState()->getTitle(); ?></td>
+	  
+        <tr> 
+		  <td style="width: 20px;"></td>
+          <td data-label="<?php echo $this->translate("Casename"); ?>"><a href="<?php echo $report->getDirectLink(); ?>"><?php echo $report->getTitle(); ?></a></td>
+          <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $report->getState()->getTitle();; ?></td>
+          <td data-label="<?php echo $this->translate("Source"); ?> class="fit-content""><a href=""><?php echo $report->getFile()->getFilename(); ?></td>
         </tr>
       <?php endforeach; ?>
     <?php else: ?>
@@ -33,3 +29,4 @@ $this->headTitle($this->title);
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
 <a class="btn btn-primary" href="/report/create"><i class="icon-create-fragment"></i><?php echo $this->translate("Create a report"); ?></span></a>
+
