--- a/application/views/scripts/report/list.phtml
+++ b/application/views/scripts/report/list.phtml
@@ -1,8 +1,12 @@
+<?php
+$this->title = $this->translate("List of reports");
+$this->headTitle($this->title);
+?>
 <table cellpadding="0" cellspacing="0" class="default">
   <thead>
     <tr>
       <th style="width: 20px;"></th>
-      <th><?php echo $this->translate("Casename"); ?></th>
+      <th><?php echo $this->translate("Report"); ?></th>
       <th style="width: 110px;"><?php echo $this->translate("State"); ?></th>
 	  <th style="width: 110px;"><?php echo $this->translate("Source"); ?></th>
       <th class="fit-content"><?php echo $this->translate(""); ?></th>
@@ -14,7 +18,7 @@
 	  
         <tr> 
 		  <td style="width: 20px;"></td>
-          <td data-label="<?php echo $this->translate("Casename"); ?>"><a href="/report/download/id/<?php echo $report->getId(); ?>"><?php echo $report->getTitle(); ?></a></td>
+          <td data-label="<?php echo $this->translate("Report"); ?>"><a href="/report/download/id/<?php echo $report->getId(); ?>"><?php echo $report->getTitle(); ?></a></td>
           <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $report->getState()->getTitle();; ?></td>
           <td data-label="<?php echo $this->translate("Source"); ?> class="fit-content""><a href="<?php echo $report->getFile()->getDirectLink()?>"><?php echo $report->getFile()->getFilename(); ?></a></td>
         </tr>
