--- a/application/views/scripts/report/list.phtml
+++ b/application/views/scripts/report/list.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->title = $this->translate("List of reports");
+$this->title = $this->translate("List of final reports");
 $this->headTitle($this->title);
 ?>
 <table cellpadding="0" cellspacing="0" class="default">
