optimize reports create page

--- a/application/views/scripts/report/create.phtml
+++ b/application/views/scripts/report/create.phtml
@@ -1,5 +1,5 @@
 <?php
-    $this->title = $this->translate("Create a report");
+    $this->title = $this->translate($this->title);
     $this->headTitle($this->title);
 ?>
 
