--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -18,7 +18,7 @@
     <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/script.js'); ?>"></script>
     
-    <?php //This probably needs to be merged with script.js ?>
+    <?php // @todo: this needs to be merged into script.js, but for developing it is better to have single script files ?>
     <script defer src="<?php echo $this->baseUrl('/js/contextmenu.js'); ?>"></script>
 </body>
 </html>
