--- a/application/views/scripts/notification/recent-activity.phtml
+++ b/application/views/scripts/notification/recent-activity.phtml
@@ -13,14 +13,14 @@ $this->headTitle($this->title);
             <span class="title"><i class="<?php echo $notification->getSource()->getIconClass(); ?> icon-fam"></i><?php echo sprintf($notification->getTitle(), "<a href=\"" . $notification->getSource()->getDirectLink() . "\">" . $notification->getSource()->getDirectName() . "</a>"); ?></span> <span class="user"><?php echo $notification->getUser()->getUsername();?>, <?php echo Unplagged_Helper::humanTiming($notification->getCreated()); ?> </span>
           </h4>
           <div class="links"  style="text-align: right">
-            <a class="btn toggle-comments" href="#" for="comments-wrapper-<?php echo $notification->getId(); ?>" class="toggle-comments"><i class="icon-comments icon-fam"></i>Show conversation</a>
+            <a class="btn toggle-conversation" href="#" for="conversation-wrapper-<?php echo $notification->getId(); ?>" class="toggle-comments"><i class="icon-comments icon-fam"></i>Show conversation</a>
         </div>
         </div>
         <p><?php echo $notification->getMessage(); ?></p>
         
       </div>
     </div>
-    <?php echo $this->partial('partials/comments.phtml', array('sourceId' => $notification->getId(), 'hidden' => true)); ?>
+    <?php echo $this->partial('partials/conversation.phtml', array('sourceId' => $notification->getId(), 'hidden' => true)); ?>
   </div>
   <?php endforeach; ?>
 </div>
