--- a/application/views/scripts/report/list.phtml
+++ b/application/views/scripts/report/list.phtml
@@ -19,8 +19,16 @@ $this->headTitle($this->title);
         <tr> 
 		  <td style="width: 20px;"></td>
           <td data-label="<?php echo $this->translate("Report"); ?>"><a href="/report/download/id/<?php echo $report->getId(); ?>"><?php echo $report->getTitle(); ?></a></td>
-          <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $report->getState()->getTitle();; ?></td>
-          <td data-label="<?php echo $this->translate("Source"); ?> class="fit-content""><a href="<?php echo $report->getFile()->getDirectLink()?>"><?php echo $report->getFile()->getFilename(); ?></a></td>
+          <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $report->getState()->getTitle(); ?></td>
+          <td data-label="<?php echo $this->translate("Source"); ?> class='fit-content'">
+            <?php if ($report->getFile() != null)
+                {            
+            ?>
+                <a href="<?php echo $report->getFile()->getDirectLink()?>">
+                    <?php echo $report->getFile()->getFilename(); ?>
+                </a>
+            <?php }?>
+          </td>
         </tr>
       <?php endforeach; ?>
     <?php else: ?>
